src/ffi.rs

    pub fn HPDF_MarkupAnnot_SetCreationDate(annot: HPDF_Annotation,
                                            value: HPDF_Date) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetTransparency(annot: HPDF_Annotation,
                                            value: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetIntent(annot: HPDF_Annotation,
                                      intent: HPDF_AnnotIntent)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetPopup(annot: HPDF_Annotation,
                                     popup: HPDF_Annotation) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetRectDiff(annot: HPDF_Annotation,
                                        rect: HPDF_Rect) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetCloudEffect(annot: HPDF_Annotation,
                                           cloudIntensity: HPDF_INT)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorRGBColor(annot: HPDF_Annotation,
                                                color: HPDF_RGBColor)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorCMYKColor(annot: HPDF_Annotation,
                                                 color: HPDF_CMYKColor)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorGrayColor(annot: HPDF_Annotation,
                                                 color: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorTransparent(annot: HPDF_Annotation)
     -> HPDF_STATUS;
    pub fn HPDF_TextMarkupAnnot_SetQuadPoints(annot: HPDF_Annotation,
                                              lb: HPDF_Point, rb: HPDF_Point,
                                              rt: HPDF_Point, lt: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_Set3DView(mmgr: HPDF_MMgr, annot: HPDF_Annotation,
                                annot3d: HPDF_Annotation, view: HPDF_Dict)
     -> HPDF_STATUS;
    pub fn HPDF_PopupAnnot_SetOpened(annot: HPDF_Annotation,
                                     opened: HPDF_BOOL) -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_SetLineEndingStyle(annot: HPDF_Annotation,
                                                 startStyle:
                                                     HPDF_LineAnnotEndingStyle,
                                                 endStyle:
                                                     HPDF_LineAnnotEndingStyle)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_Set3PointCalloutLine(annot: HPDF_Annotation,
                                                   startPoint: HPDF_Point,
                                                   kneePoint: HPDF_Point,
                                                   endPoint: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_Set2PointCalloutLine(annot: HPDF_Annotation,
                                                   startPoint: HPDF_Point,
                                                   endPoint: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_SetDefaultStyle(annot: HPDF_Annotation,
                                              style:
                                                  *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetPosition(annot: HPDF_Annotation,
                                      startPoint: HPDF_Point,
                                      startStyle: HPDF_LineAnnotEndingStyle,
                                      endPoint: HPDF_Point,
                                      endStyle: HPDF_LineAnnotEndingStyle)
     -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetLeader(annot: HPDF_Annotation,
                                    leaderLen: HPDF_INT,
                                    leaderExtLen: HPDF_INT,
                                    leaderOffsetLen: HPDF_INT) -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetCaption(annot: HPDF_Annotation,
                                     showCaption: HPDF_BOOL,
                                     position: HPDF_LineAnnotCapPosition,
                                     horzOffset: HPDF_INT,
                                     vertOffset: HPDF_INT) -> HPDF_STATUS;
    pub fn HPDF_Annotation_SetBorderStyle(annot: HPDF_Annotation,
                                          subtype: HPDF_BSSubtype,
                                          width: HPDF_REAL,
                                          dash_on: HPDF_UINT16,
                                          dash_off: HPDF_UINT16,
                                          dash_phase: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_ProjectionAnnot_SetExData(annot: HPDF_Annotation,
                                          exdata: HPDF_ExData) -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DC3DMeasure(page: HPDF_Page,
                                        firstanchorpoint: HPDF_Point3D,
                                        textanchorpoint: HPDF_Point3D)
     -> HPDF_3DMeasure;
    pub fn HPDF_Page_CreatePD33DMeasure(page: HPDF_Page,
                                        annotationPlaneNormal: HPDF_Point3D,
                                        firstAnchorPoint: HPDF_Point3D,
                                        secondAnchorPoint: HPDF_Point3D,
                                        leaderLinesDirection: HPDF_Point3D,
                                        measurementValuePoint: HPDF_Point3D,
                                        textYDirection: HPDF_Point3D,
                                        value: HPDF_REAL,
                                        unitsString:
                                            *const ::std::os::raw::c_char)
     -> HPDF_3DMeasure;
    pub fn HPDF_3DMeasure_SetName(measure: HPDF_3DMeasure,
                                  name: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_3DMeasure_SetColor(measure: HPDF_3DMeasure,
                                   color: HPDF_RGBColor) -> HPDF_STATUS;
    pub fn HPDF_3DMeasure_SetTextSize(measure: HPDF_3DMeasure,
                                      textsize: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetTextBoxSize(measure: HPDF_3DMeasure,
                                            x: HPDF_INT32, y: HPDF_INT32)
     -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetText(measure: HPDF_3DMeasure,
                                     text: *const ::std::os::raw::c_char,
                                     encoder: HPDF_Encoder) -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetProjectionAnotation(measure: HPDF_3DMeasure,
                                                    projectionanotation:
                                                        HPDF_Annotation)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DAnnotExData(page: HPDF_Page) -> HPDF_ExData;
    pub fn HPDF_3DAnnotExData_Set3DMeasurement(exdata: HPDF_ExData,
                                               measure: HPDF_3DMeasure)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DView(page: HPDF_Page, u3d: HPDF_U3D,
                                  annot3d: HPDF_Annotation,
                                  name: *const ::std::os::raw::c_char)
     -> HPDF_Dict;
    pub fn HPDF_3DView_Add3DC3DMeasure(view: HPDF_Dict,
                                       measure: HPDF_3DMeasure)
     -> HPDF_STATUS;
    pub fn HPDF_LoadPngImageFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                                    size: HPDF_UINT) -> HPDF_Image;
    pub fn HPDF_LoadPngImageFromFile(pdf: HPDF_Doc,
                                     filename: *const ::std::os::raw::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadPngImageFromFile2(pdf: HPDF_Doc,
                                      filename: *const ::std::os::raw::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadJpegImageFromFile(pdf: HPDF_Doc,
                                      filename: *const ::std::os::raw::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadJpegImageFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                                     size: HPDF_UINT) -> HPDF_Image;
    pub fn HPDF_LoadU3DFromFile(pdf: HPDF_Doc,
                                filename: *const ::std::os::raw::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadU3DFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                               size: HPDF_UINT) -> HPDF_Image;
    pub fn HPDF_Image_LoadRaw1BitImageFromMem(pdf: HPDF_Doc,
                                              buf: *const HPDF_BYTE,
                                              width: HPDF_UINT,
                                              height: HPDF_UINT,
                                              line_width: HPDF_UINT,
                                              black_is1: HPDF_BOOL,
                                              top_is_first: HPDF_BOOL)
     -> HPDF_Image;
    pub fn HPDF_LoadRawImageFromFile(pdf: HPDF_Doc,
                                     filename: *const ::std::os::raw::c_char,
                                     width: HPDF_UINT, height: HPDF_UINT,
                                     color_space: HPDF_ColorSpace)
     -> HPDF_Image;
    pub fn HPDF_LoadRawImageFromMem(pdf: HPDF_Doc, buf: *const HPDF_BYTE,
                                    width: HPDF_UINT, height: HPDF_UINT,
                                    color_space: HPDF_ColorSpace,
                                    bits_per_component: HPDF_UINT)
     -> HPDF_Image;
    pub fn HPDF_Image_AddSMask(image: HPDF_Image, smask: HPDF_Image)
     -> HPDF_STATUS;
    pub fn HPDF_Image_GetSize(image: HPDF_Image) -> HPDF_Point;
    pub fn HPDF_Image_GetSize2(image: HPDF_Image, size: *mut HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Image_GetWidth(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetHeight(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetBitsPerComponent(image: HPDF_Image) -> HPDF_UINT;
    pub fn HPDF_Image_GetColorSpace(image: HPDF_Image)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_Image_SetColorMask(image: HPDF_Image, rmin: HPDF_UINT,
                                   rmax: HPDF_UINT, gmin: HPDF_UINT,
                                   gmax: HPDF_UINT, bmin: HPDF_UINT,
                                   bmax: HPDF_UINT) -> HPDF_STATUS;
    pub fn HPDF_Image_SetMaskImage(image: HPDF_Image, mask_image: HPDF_Image)
     -> HPDF_STATUS;
    pub fn HPDF_SetInfoAttr(pdf: HPDF_Doc, _type: HPDF_InfoType,
                            value: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_GetInfoAttr(pdf: HPDF_Doc, _type: HPDF_InfoType)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_SetInfoDateAttr(pdf: HPDF_Doc, _type: HPDF_InfoType,
                                value: HPDF_Date) -> HPDF_STATUS;
    pub fn HPDF_SetPassword(pdf: HPDF_Doc,
                            owner_passwd: *const ::std::os::raw::c_char,
                            user_passwd: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_SetPermission(pdf: HPDF_Doc, permission: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_SetEncryptionMode(pdf: HPDF_Doc, mode: HPDF_EncryptMode,
                                  key_len: HPDF_UINT) -> HPDF_STATUS;
    pub fn HPDF_SetCompressionMode(pdf: HPDF_Doc, mode: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_Font_GetFontName(font: HPDF_Font)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_Font_GetEncodingName(font: HPDF_Font)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_Font_GetUnicodeWidth(font: HPDF_Font, code: HPDF_UNICODE)
     -> HPDF_INT;
    pub fn HPDF_Font_GetBBox(font: HPDF_Font) -> HPDF_Box;
    pub fn HPDF_Font_GetAscent(font: HPDF_Font) -> HPDF_INT;
    pub fn HPDF_Font_GetDescent(font: HPDF_Font) -> HPDF_INT;
    pub fn HPDF_Font_GetXHeight(font: HPDF_Font) -> HPDF_UINT;
    pub fn HPDF_Font_GetCapHeight(font: HPDF_Font) -> HPDF_UINT;
    pub fn HPDF_Font_TextWidth(font: HPDF_Font, text: *const HPDF_BYTE,
                               len: HPDF_UINT) -> HPDF_TextWidth;
